Third Commit. Main classes and logic added.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /WpfMap/obj/Debug
+/WpfMap/.vs/WpfMap/v15
+/WpfMap/bin/Debug
